--- a/app.html
+++ b/app.html
@@ -8,28 +8,7 @@
     <link rel="stylesheet" href="app.css">
 </head>
 <body>
-
-    <div class="container">
-        <header>
-
-            <div class="slider">
-                <img src="./img/bannerBG.png" alt="">
-                <img class="slider-img" src="./img/banner1.png" alt="">
-            </div>
-
-            <div class="login-form">
-                <h1>Instagram</h1>
-                <input type="text" placeholder="Phone number, username or email">
-                <input type="password" placeholder="Password">
-                <button type="sunmit">Log in</button>
-                <p>---------------<span>OR</span>---------------</p>                
-                <a href="">Login with Facebook</a>
-                <a href="">Fogot passwpr</a>
-            </div>
-            
-        </header>
-    </div>
-    
+    <h1 class="Text">Hello Kerim!</h1>
     <script src="app.js"></script>
 </body>
 </html>
